--- a/src/a/pesanan.form
+++ b/src/a/pesanan.form
@@ -6,8 +6,11 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="true"/>
   </SyntheticProperties>
+  <Events>
+    <EventHandler event="windowClosing" listener="java.awt.event.WindowListener" parameters="java.awt.event.WindowEvent" handler="formWindowClosing"/>
+  </Events>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -50,7 +53,7 @@
                   <Table columnCount="3" rowCount="0">
                     <Column editable="false" title="ID Pesanan" type="java.lang.Object"/>
                     <Column editable="false" title="No Antrian" type="java.lang.Object"/>
-                    <Column editable="false" title="ID Pembayaran" type="java.lang.Object"/>
+                    <Column editable="false" title="Total Bayar" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -120,7 +123,7 @@
                   <Table columnCount="3" rowCount="0">
                     <Column editable="false" title="ID Pesanan" type="java.lang.Object"/>
                     <Column editable="false" title="No Antrian" type="java.lang.Object"/>
-                    <Column editable="false" title="ID Pembayaran" type="java.lang.Object"/>
+                    <Column editable="false" title="Total Bayar" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -187,7 +190,7 @@
                   <Table columnCount="3" rowCount="0">
                     <Column editable="false" title="ID Pesanan" type="java.lang.Object"/>
                     <Column editable="false" title="No Antrian" type="java.lang.Object"/>
-                    <Column editable="false" title="ID Pembayaran" type="java.lang.Object"/>
+                    <Column editable="false" title="Total Bayar" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
