--- a/src/a/riwayat_pesanan.form
+++ b/src/a/riwayat_pesanan.form
@@ -36,6 +36,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JLabel" name="lb_next">
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="lb_nextMouseClicked"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="720" y="30" width="50" height="20"/>
@@ -48,7 +51,7 @@
       </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="60" y="90" width="700" height="410"/>
+          <AbsoluteConstraints x="50" y="80" width="720" height="430"/>
         </Constraint>
       </Constraints>
 
